# pollitomaster

./: .env.signing.example  .gitignore  DESIGN.md  PRODUCT.md  README.md  RELEASE_NOTES.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
release/: latest.json.example
scripts/: setup-updater-signing.mjs  sync-version.mjs
src/: App.css  App.tsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: AppLayout.tsx  AppRouter.tsx  ProtectedRoute.tsx
src/app/providers/: AuthProvider.tsx  UpdateProvider.tsx
src/components/ui/: AppSidebar.tsx  BottomNav.tsx  DetailPanel.tsx  PlannerWeekView.tsx  ScreenHeader.tsx  SectionCard.tsx
src/features/alarms/: AlarmCenterPage.tsx  AlarmsPage.tsx
src/features/auth/: AuthPage.tsx
src/features/connections/: ConnectionsPage.tsx
src/features/home/: HomePage.tsx
src/features/planner/: PlannerPage.tsx
src/features/settings/: DeveloperSection.tsx  SettingsPage.tsx  UpdatesSection.tsx
src/services/: aiService.ts  databaseService.ts  localStorageService.ts  logService.ts  supabaseAuth.ts  updateService.ts
src/shared/: i18n.ts
src/types/: domain.ts
