[package]
name = "pollito-master"
version = "0.0.1"
description = "Pollito Master desktop app"
authors = ["Pollito Master"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
